--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mip-builder",
     "description": "Builder for MIP and MIP Extension",
-    "version": "1.0.0",
+    "version": "1.1.0",
 
     "keywords": [
         "mip",
@@ -20,6 +20,14 @@
         "minimatch": "^3.0.3",
         "iconv-lite": "^0.4.13",
         "mip-processor": "^1.0.0"
+    },
+
+    "devDependencies": {
+        "jasmine": "^2.5.2"
+    },
+
+    "scripts": {
+        "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json"
     },
 
     "engines": {
